examples/neg/variables.effekt
module variables

def main() = {
  val x = 5;
  x = 9
}