examples/neg/variables.check
examples/neg/variables.effekt:5:3:error: Expected a mutable variable
  x = 9
  ^
